--- a/core/cloudModule/pom.xml
+++ b/core/cloudModule/pom.xml
@@ -302,6 +302,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+            <version>1.6.2</version>
+        </dependency>
 
     </dependencies>
 
