本地联调配置

--- a/publicService/conf/linkis.properties
+++ b/publicService/conf/linkis.properties
@@ -14,13 +14,15 @@
 # limitations under the License.
 #
 
-#wds.linkis.test.mode=true
+wds.linkis.test.mode=true
+wds.linkis.test.user=luxl
 
-wds.linkis.server.mybatis.datasource.url=
+wds.linkis.server.mybatis.datasource.url=jdbc:mysql://10.30.66.34:3306/linkis
 
-wds.linkis.server.mybatis.datasource.username=
+wds.linkis.server.mybatis.datasource.username=linkis
 
-wds.linkis.server.mybatis.datasource.password=
+wds.linkis.server.mybatis.datasource.password=Linkis@2020
+
 
 
 wds.linkis.log.clear=true
