--- a/gateway/gateway-ujes-support/src/main/resources/application.yml
+++ b/gateway/gateway-ujes-support/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:port/eureka/
+      defaultZone: http://localhost:8080/eureka/
     registry-fetch-interval-seconds: 5
   instance:
     metadata-map:
