--- a/publicService/pom.xml
+++ b/publicService/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>linkis-workspace</artifactId>
             <version>${linkis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.linkis</groupId>
+            <artifactId>public-module</artifactId>
+            <version>${linkis.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
